--- a/app/views/legal_services/journey/lot1_regional_service.html.erb
+++ b/app/views/legal_services/journey/lot1_regional_service.html.erb
@@ -12,7 +12,7 @@
       </legend>
       <%= display_error(@journey, :central_government) %>
           <div class="govuk-checkboxes ccs-govuk-checkboxes--s">
-             <% lot1 = ['Property and constuction', 'Litigation/dispute resolution','Employment'] %>
+             <% lot1 = ['North East', 'North West','Yorkshire and the Humber','East Midlands', 'West Midlands','East of England', 'Greater London', 'South East','South West','Wales','Scotland','Northern Ireland','Full national coverage'] %>
              <% lot1.each do |lot| %>
                <div class="govuk-checkboxes__item">
                  <%= check_box_tag(
