--- a/app/views/management_consultancy/journey/choose_regions.html.erb
+++ b/app/views/management_consultancy/journey/choose_regions.html.erb
@@ -1,35 +1,64 @@
 <%= add_optional_error_prefix_to_page_title(@journey.errors) %>
+<div id="ccs-dynamic-accordian" class="govuk-grid-row">
 
-<%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
-<%= form_tag @form_path, method: :get do %>
-  <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
-  <%= govuk_form_group_with_optional_error(@journey, :region_codes) do %>
-    <%= govuk_fieldset_with_optional_error(@journey, :region_codes) do %>
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        <h1 class="govuk-fieldset__heading">
-          <%= t('.question') %>
-        </h1>
-        <%= display_error(@journey, :region_codes) %>
-      </legend>
-        <div class="govuk-form-group">
-          <div class="govuk-checkboxes">
-            <% Nuts2Region.all.each do |region| %>
-              <div class="govuk-checkboxes__item">
-                <%= check_box_tag(
-                  "region_codes[]",
-                  region.code,
-                  @journey.current_step.regions.include?(region),
-                  class: "govuk-checkboxes__input",
-                  id: "region_#{region.code}"
-                ) %>
-                <label class="govuk-label govuk-checkboxes__label" for="region_<%= region.code %>">
-                  <%= region.name %>
-                </label>
+  <%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
+  <%= form_tag @form_path, method: :get do %>
+    <div class="govuk-grid-column-two-thirds">
+      <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
+      <%= govuk_form_group_with_optional_error(@journey, :region_codes) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :region_codes) do %>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h1 class="govuk-fieldset__heading">
+              <%= t('.question') %>
+            </h1>
+            <p class="govuk-caption-m"><%= t('.subtitle') %></p>
+            <%= display_error(@journey, :region_codes) %>
+          </legend>
+          <div class="govuk-accordion" data-module="accordion" id="accordion-default">
+            <% Nuts1Region.all.each do |nuts1_region| %>
+              <div class="govuk-accordion__section">
+                <div class="govuk-accordion__section-header">
+                  <h2 class="govuk-accordion__section-heading">
+                    <span class="govuk-accordion__section-button" id="accordion-default-heading-<%= nuts1_region.code %>">
+                      <%= nuts1_region.name %>
+                    </span>
+                  </h2>
+                </div>
+                <div class="govuk-accordion__section-content">
+                  <div class="govuk-form-group">
+                    <div class="govuk-checkboxes">
+                      <% Nuts2Region.where(nuts1_code: nuts1_region.code).each do |region| %>
+                        <div class="govuk-checkboxes__item">
+                          <%= check_box_tag(
+                            "region_codes[]",
+                            region.code,
+                            @journey.current_step.regions.include?(region),
+                            class: "govuk-checkboxes__input",
+                            id: "region_#{region.code}"
+                            ) %>
+                          <label class="govuk-label govuk-checkboxes__label" for="region_<%= region.code %>">
+                            <%= region.name %>
+                          </label>
+                        </div>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
               </div>
             <% end %>
           </div>
+        <% end %>
+      <% end %>
+    </div>
+    <div class="govuk-grid-column-one-third govuk-!-margin-top-9">
+      <div id="css-list-basket">
+        <%= submit_tag t('common.submit'), class: "govuk-button" %>
+        <div>
+          <h3 class="govuk-heading-m" data-txt01="<%= t('.regions_selected') %>" data-txt02="<%= t('.no_regions_selected') %>"><span></span> <span></span></h3>
+          <a role="button" href="#" class="ccs-remove govuk-link--no-visited-state ccs-no-print" id="removeAll"><%= t('.remove_all') %></a>
+          <ul class="govuk-list"></ul>
         </div>
-    <% end %>
+      </div>
+    </div>
   <% end %>
-  <%= submit_tag t('common.submit'), class: "govuk-button" %>
-<% end %>
+</div>
