font size changed

--- a/app/views/legal_services/suppliers/cg_no_suppliers_found.html.erb
+++ b/app/views/legal_services/suppliers/cg_no_suppliers_found.html.erb
@@ -3,7 +3,7 @@
 
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-5"><%= t('.heading') %></h1>
 
-        <p class="govuk-body-l"><%= t('.statement_pt_1') %> <a href="<%= t('common.general_legal_advice_services_url') %>" class="govuk-link"><%= t('.statement_pt_2_link_text') %></a> <%= t('.statement_pt_3') %></p>
+        <p class="govuk-body"><%= t('.statement_pt_1') %> <a href="<%= t('common.general_legal_advice_services_url') %>" class="govuk-link"><%= t('.statement_pt_2_link_text') %></a> <%= t('.statement_pt_3') %></p>
 
     </div>
 </div>
