FM-97 fix for contract extentions count

--- a/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
@@ -29,7 +29,7 @@
             </div>
           </div>
           <div>
-            <a class="govuk-link" id="fm-add-another-extension-link" role="button" href="">+ Add another
+            <a class="govuk-link govuk-link--no-visited-state" id="fm-add-another-extension-link" role="button" href="">+ Add another
               (<span id="fm-remaining-extension-count"></span><span> remaining)</span></a>
           </div>
         </div>
