--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -28,7 +28,7 @@
                 <fieldset class="govuk-fieldset" aria-describedby="<%= workPackage['name'] %>">
                   <div id="services-checkboxes" class="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
-                      <input title="<%= workPackage['name'] %>" class="govuk-checkboxes__input" id="<%= workPackage['code'].sub('.', '-') %>" name="<%= workPackage['code'].sub('.', '') %>" serviceid="<%= workPackage['name'] %>" type="checkbox" value="<%= workPackage['code'] %>">
+                      <input title="<%= workPackage['name'] %>" class="govuk-checkboxes__input" id="<%= workPackage['code'].sub('.', '-') %>" name="fm-building-service-checkbox" serviceid="<%= workPackage['name'] %>" type="checkbox" value="<%= workPackage['code'] %>">
                       <label class="govuk-label govuk-checkboxes__label" for="<%= workPackage['code'] %>">
                         <%= workPackage['name'] %>
                       </label>
