--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -33,7 +33,7 @@
                   <div id="location-checkboxes" class="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
                       <input class="govuk-checkboxes__input" id="<%= key2 %>" name="<%= key2 %>" locationid="<%= value2 %>" type="checkbox" value="<%= key2 %>">
-                      <label id="<%= key2 %>_label" class="govuk-label govuk-checkboxes__label" for="<%= key2 %>">
+                      <label id="<%= key2 %>_label" class="govuk-label govuk-checkboxes__label CCS-fm-region-filter-check-box-label" for="<%= key2 %>">
                         <%= value2 %>
                       </label>
                     </div>
