change upload get to post

--- a/app/views/facilities_management/summary/index.html.erb
+++ b/app/views/facilities_management/summary/index.html.erb
@@ -66,7 +66,7 @@
             Yes, I will move up a sub-lot
           </label> </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="changed-name-2" name="stay-in-the-same-sublot" type="radio" value="no">
+          <input class="govuk-radios__input" id="changed-name-2" name="stay-in-the-same§-sublot" type="radio" value="no">
           <label class="govuk-label govuk-radios__label" for="changed-name-2">
             No, I will stay in the same sub-lot
           </label> </div>
