FM-78-regions-bleed-over-on-mobile-device

--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -23,7 +23,7 @@
             <span class="govuk-accordion__section-button" id="region-<%= key %>"><%= value %></span>
           </h2>
         </div>
-        <div id="<% key %>-content" class="govuk-accordion__section-content" aria-labelledby="<%= value %>">
+        <div id="<% key %>-content" class="govuk-accordion__section-content CCS-fm-region-filter-check-box-label" aria-labelledby="<%= value %>">
 
           <% @subregions.each do |key2, value2| %>
 
