--- a/app/assets/stylesheets/facilities_management/long_list.scss
+++ b/app/assets/stylesheets/facilities_management/long_list.scss
@@ -33,10 +33,11 @@
   padding-left: 5px;
 }
 
-.CCS-fm-region-filter-check-box-label {
-  background-color: white;
-  height: 26px;
-  overflow-wrap: break-word;
-  margin-left: 0px !important;
-  padding-left: 5px;
+@media only screen and (orientation: portrait) {
+  .CCS-fm-region-filter-check-box-label {
+    background-color: white;
+    overflow-wrap: break-word;
+    max-width: 239px;
+    padding-left: 5px;
+  }
 }
