--- a/app/views/management_consultancy/journey/choose_lot.html.erb
+++ b/app/views/management_consultancy/journey/choose_lot.html.erb
@@ -16,24 +16,48 @@
       <%= display_error(@journey, :lot) %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <%= radio_button_tag :lot, '1', checked?(params[:lot], '1'), class: 'govuk-radios__input' %>
-          <%= label_tag :lot_1, ManagementConsultancy::Lot['1'].full_description, class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :lot, 'MCF2.1', checked?(params[:lot], 'MCF2.1'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF2.1", ManagementConsultancy::Lot['MCF2.1'].full_description, class: 'govuk-label govuk-radios__label' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :lot, '2', checked?(params[:lot], '2'), class: 'govuk-radios__input' %>
-          <%= label_tag :lot_2, ManagementConsultancy::Lot['2'].full_description, class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :lot, 'MCF2.2', checked?(params[:lot], 'MCF2.2'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF2.2", ManagementConsultancy::Lot['MCF2.2'].full_description, class: 'govuk-label govuk-radios__label' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :lot, '3', checked?(params[:lot], '3'), class: 'govuk-radios__input' %>
-          <%= label_tag :lot_3, ManagementConsultancy::Lot['3'].full_description, class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :lot, 'MCF2.3', checked?(params[:lot], ' MCF2.3'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF2.3", ManagementConsultancy::Lot['MCF2.3'].full_description, class: 'govuk-label govuk-radios__label' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :lot, '4', checked?(params[:lot], '4'), class: 'govuk-radios__input' %>
-          <%= label_tag :lot_4, ManagementConsultancy::Lot['4'].full_description, class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :lot, 'MCF2.4', checked?(params[:lot], 'MCF2.4'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF2.4", ManagementConsultancy::Lot['MCF2.4'].full_description, class: 'govuk-label govuk-radios__label' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :lot, 'MCF2.3', checked?(params[:lot], 'MCF2.3'), class: 'govuk-radios__input' %>
-          <%= label_tag :lot_mcf2_3, ManagementConsultancy::Lot['MCF2.3'].full_description, class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :lot, 'MCF1.2', checked?(params[:lot], 'MCF1.2'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.3", ManagementConsultancy::Lot['MCF1.2'].full_description, class: 'govuk-label govuk-radios__label' %>
+        </div>
+        <div class="govuk-radios__item">
+          <%= radio_button_tag :lot, 'MCF1.3', checked?(params[:lot], 'MCF1.3'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.3", ManagementConsultancy::Lot['MCF1.3'].full_description, class: 'govuk-label govuk-radios__label' %>
+        </div>
+        <div class="govuk-radios__item">
+          <%= radio_button_tag :lot, 'MCF1.4', checked?(params[:lot], 'MCF1.4'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.4", ManagementConsultancy::Lot['MCF1.4'].full_description, class: 'govuk-label govuk-radios__label' %>
+        </div>
+        <div class="govuk-radios__item">
+          <%= radio_button_tag :lot, 'MCF1.5', checked?(params[:lot], 'MCF1.5'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.5", ManagementConsultancy::Lot['MCF1.5'].full_description, class: 'govuk-label govuk-radios__label' %>
+        </div>
+        <div class="govuk-radios__item">
+          <%= radio_button_tag :lot, 'MCF1.6', checked?(params[:lot], 'MCF1.6'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.6", ManagementConsultancy::Lot['MCF1.6'].full_description, class: 'govuk-label govuk-radios__label' %>
+        </div>
+        <div class="govuk-radios__item">
+          <%= radio_button_tag :lot, 'MCF1.7', checked?(params[:lot], 'MCF1.7'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.7", ManagementConsultancy::Lot['MCF1.7'].full_description, class: 'govuk-label govuk-radios__label' %>
+        </div>
+        <div class="govuk-radios__item">
+          <%= radio_button_tag :lot, 'MCF1.8', checked?(params[:lot], 'MCF1.8'), class: 'govuk-radios__input' %>
+          <%= label_tag :"lot_MCF1.8", ManagementConsultancy::Lot['MCF1.8'].full_description, class: 'govuk-label govuk-radios__label' %>
         </div>
       </div>
     <% end %>
