--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -12,19 +12,19 @@
         <div class="govuk-accordion__section ">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
-              <!--<div class="govuk-radios__item govuk-!-margin-top-3">-->
-              <!-- <input class="govuk-radios__input" id="<%= 'building' + x.to_s %>" name="<%= 'building_radio' %>" type="radio" value="<%= 'building' + x.to_s %>">-->
-              <!-- <label class="govuk-label govuk-radios__label" for="<%= 'building' + x.to_s %>">-->
-              <span class="govuk-accordion__section-button" id="<%= building['id'].to_s + '_btn' %>"><%= 'Building ' + x.to_s + ' - ' + building['name'].to_s %>
-                <br>
+                <span class="govuk-accordion__section-button" id="<%= building['id'].to_s + '_btn' %>"><%= 'Building ' + x.to_s + ' - ' + building['name'].to_s %>
+                  <br>
+
                 <span class="govuk-caption-m govuk-!-font-size-18">
+                  <% if building.any? %>
                   <% address = building['address']['fm-address-line-1'].to_s + ', ' +
                       building['address']['fm-address-line-2'].to_s + ', ' +
                       building['address']['fm-address-town'].to_s + ', ' +
                       building['address']['fm-address-county'].to_s + ', ' +
                       building['address']['fm-address-postcode'].to_s
                   %>
-                  <%= address.sub(', , ', ', ') %>
+                    <%= address.sub(', , ', ', ') %>
+                  <% end %>
                 </span>
               </span>
               <!--</label>-->
