--- a/app/views/facilities_management/summary/index.html.erb
+++ b/app/views/facilities_management/summary/index.html.erb
@@ -6,7 +6,7 @@
     <div>
         <strong> Current Lot <%= @current_lot %></strong>
       <fieldset class="govuk-fieldset" aria-describedby="">
-        <strong class="govuk-heading-xl"> Review services without pricing</strong>
+        <strong class="govuk-heading-xl"> Review services without pricing <%= title %></strong>
 <!--
         <div class="govuk-inset-text ccs-no-print">
           <strong>On this page</strong><br>
