--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -75,7 +75,29 @@ abbr {
     font-family: $govuk-font-family;
 }
 
-
+/* form.ccs-form overrides start */
+form.css-form {
+    .govuk-input,
+    .govuk-textarea,
+    .govuk-radios__input,
+    .js-enabled .govuk-tabs__list,
+    .js-enabled .govuk-tabs__panel,
+    .js-enabled .govuk-tabs__tab[aria-selected="true"] {
+        border-width: 1.5px !important;
+    }
+    .govuk-radios__input + .govuk-radios__label::before {
+        border-width: 1.6px;
+    }
+    .js-enabled .govuk-tabs__tab[aria-selected="true"]{
+        margin-bottom: -2px !important;
+    }
+    .supplier-record__file-download abbr {
+        position: absolute;
+        top: -3000px;
+        left: -3000px;
+    }
+}
+/* form.ccs-form overrides end */
 
 /* css-tag (inline solid title block) #start ****** */
 .ccs-tag {
