--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -76,7 +76,7 @@ abbr {
 }
 
 /* form.ccs-form overrides start */
-form.css-form {
+form.ccs-form {
     .govuk-input,
     .govuk-textarea,
     .govuk-radios__input,
