--- a/app/views/apprenticeships/home/find_apprentices6.html.erb
+++ b/app/views/apprenticeships/home/find_apprentices6.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
+<%= form_tag apprenticeships_search_results_path, class: :'ccs-form', method: :get do %>
 
   <label class="govuk-label govuk-label--xl" for="search">
     <%= t('Find an apprenticeship standard') %>
@@ -25,7 +25,7 @@
    <section class="govuk-tabs__panel" id="keyword-search">
         <h2 class="govuk-heading-l"><%= t('Keyword search') %></h2>
    <label class="govuk-label" for="event-name">
-    Keyword search 
+    Keyword search
   </label>
   <input class="govuk-input" id="event-name" name="event-name" type="text">
 <br/>
