--- a/app/views/apprenticeships/home/requirement.html.erb
+++ b/app/views/apprenticeships/home/requirement.html.erb
@@ -9,10 +9,10 @@
       <h1 class="govuk-heading-xl"><%= t('.requirement_h1_title') %></h1>
 
     </div>
-  </div> 
+  </div>
 
-  <form action="supplier_search" method="">
-    
+  <form action="supplier_search" class="ccs-form" method="">
+
     <div class="govuk-grid-row">
 
       <div class="ccs-right-panel-sticky">
@@ -22,7 +22,7 @@
       </div>
 
       <div class="govuk-grid-column-two-thirds">
-        
+
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
@@ -71,7 +71,7 @@
               </div>
             </div>
           </fieldset>
-        </div>   
+        </div>
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="hint-radio-c">
@@ -100,8 +100,8 @@
               </div>
             </div>
           </fieldset>
-        </div>  
-        
+        </div>
+
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--s" for="input-01">
             <%= t('.question_04') %>
@@ -116,7 +116,7 @@
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-                    
+
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading ccs-fieldset__heading--wide">
                 <%= t('.question_05') %>
@@ -136,7 +136,7 @@
                 <label class="govuk-label govuk-radios__label" for="radio-id-08">
                   No
                 </label>
-              </div>  
+              </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="postcode-box">
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="input-postcode">
