--- a/app/views/apprenticeships/home/requirements.html.erb
+++ b/app/views/apprenticeships/home/requirements.html.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-  <form action="requirement" method="">
+  <form action="requirement" class="ccs-form" method="">
 
     <div class="govuk-grid-row">
 
