--- a/app/views/apprenticeships/home/training_information.html.erb
+++ b/app/views/apprenticeships/home/training_information.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
+<%= form_tag apprenticeships_search_results_path, class: :'ccs-form', method: :get do %>
 <div>
   <label class="govuk-label govuk-label--m" for="search">
     <%= t('Training provider information STUB') %>
