ccs patterns form class update

--- a/app/views/ccs_patterns/home/errors_find_apprentices2.html.erb
+++ b/app/views/ccs_patterns/home/errors_find_apprentices2.html.erb
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="find_apprentices3" method="">
+      <form action="find_apprentices3" class="ccs-form" method="">
 
 
 
