--- a/app/views/ccs_patterns/home/errors_find_apprentices3.html.erb
+++ b/app/views/ccs_patterns/home/errors_find_apprentices3.html.erb
@@ -21,7 +21,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-     <form action="" method="">
+     <form action="" class="ccs-form" method="">
 
 
 
