--- a/app/views/ccs_patterns/home/titles_checkboxes.html.erb
+++ b/app/views/ccs_patterns/home/titles_checkboxes.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <section class="govuk-grid-column-two-thirds">
-      <form action="" method="">
+      <form action="" class="ccs-form" method="">
 
         <div class="govuk-form-group ccs-titles-checkboxes">
           <fieldset class="govuk-fieldset">
