--- a/app/views/ccs_patterns/home/errors_find_apprentices.html.erb
+++ b/app/views/ccs_patterns/home/errors_find_apprentices.html.erb
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="" method="">
+      <form action="" class="ccs-form" method="">
 
 
         <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
